fix: scrollbar fixed

--- a/components/MediaPatners/mediapatners.module.scss
+++ b/components/MediaPatners/mediapatners.module.scss
@@ -107,7 +107,7 @@
       flex-direction: column;
       height: calc(100% - 170px);
       width: 1500px;
-      max-width: 100%;
+      max-width: 90%;
       align-items: center;
       justify-items: center;
       gap: 50px;
@@ -120,6 +120,11 @@
       &::-webkit-scrollbar {
         display: none; 
       }
+
+      @media screen and (max-width: 768px) {
+        max-width: 100%;
+      }
+
 
       @media screen and (max-width: 925px) {
         .other{
