--- a/components/Sponsors/sponsors.module.scss
+++ b/components/Sponsors/sponsors.module.scss
@@ -116,7 +116,7 @@
       flex-direction: column;
       height: calc(100% - 170px);
       width: 1500px;
-      max-width: 100%;
+      max-width: 90%;
       align-items: center;
       justify-items: center;
       gap: 50px;
@@ -128,6 +128,10 @@
       -ms-overflow-style: none; 
       &::-webkit-scrollbar {
         display: none; 
+      }
+
+      @media screen and (max-width: 768px) {
+        max-width: 100%;
       }
 
       @media screen and (max-width: 925px) {
